<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadResortActivity">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <LinearLayout
                    android:id="@+id/appBar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imageMenu"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_back"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:text="Upload"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>
            <ImageView
                android:id="@+id/image_view_resort"
                android:layout_width="match_parent"
                android:layout_height="300dp"

                android:background="@color/grey"

                >

            </ImageView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/resortname"
                android:layout_margin="6dp"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                app:startIconDrawable="@drawable/ic_person_24"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resortnameiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:layout_margin="6dp"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                app:startIconDrawable="@drawable/ic_edit_location"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resortaddressiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:layout_margin="6dp"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                app:startIconDrawable="@drawable/ic_local_phone"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resortphoneiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:layout_margin="6dp"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                app:startIconDrawable="@drawable/ic_email"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resortmailiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/uploadb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary1"

                android:text="Upload"></Button>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/floatingActionButton"
        android:contentDescription="@string/resortpicupload"
        android:src="@drawable/ic_add_a_photo"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_anchor="@id/image_view_resort"
        app:layout_anchorGravity="bottom|right|end"
        app:tint="@color/white">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


    <!--    <Button-->
<!--        android:id="@+id/back"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Button"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.5" />-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>